--- a/src/style.css
+++ b/src/style.css
@@ -88,7 +88,7 @@ a:hover{
     color: var(--Dark_Grey);
 }
 
-input{
+button{
     font-size: 14px;
     color: var(--White);
     font-weight: 700;
