--- a/src/style.css
+++ b/src/style.css
@@ -66,7 +66,7 @@ img{
     border-radius: 5px;
     background-color: var(--Grey);
     color: var(--White);
-    width: 80%;
+    width: 100%;
 }
 
 a{
@@ -88,7 +88,7 @@ a:hover{
     color: var(--Dark_Grey);
 }
 
-button{
+input{
     font-size: 14px;
     color: var(--White);
     font-weight: 700;
