--- a/src/style.css
+++ b/src/style.css
@@ -1,109 +1,75 @@
-@font-face {
-    font-family: Inter;
-    src: url(assets/fonts/Inter.ttf);
-}
-
-:root{
-    --Green: hsl(75, 94%, 57%);
-    --White: hsl(0, 0%, 100%);
-    --Grey: hsl(0, 0%, 20%);
-    --Dark_Grey: hsl(0, 0%, 12%);
-    --Off_Black: hsl(0, 0%, 8%);
-}
-
-* {
-    font-family: Inter;
+body {
+    font-family: 'Arial', sans-serif;
+    background-color: #1e1e1e;
+    color: #cfcfcf;
     margin: 0;
     padding: 0;
-    box-sizing: border-box;
-}
-
-p {
-    font-size: 14px;
-}
-
-body {
-    width: 100vw;
-    height: 100vh;
-    background: var(--Off_Black);
     display: flex;
-    flex-direction: row;
     justify-content: center;
     align-items: center;
-}
-
-img{
-    width: 150px;
-    height: 150px;
-    margin-bottom: 12px;
-    border-radius: 100px;
+    height: 100vh;
 }
 
 .main {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    border-radius: 15px;
-    color: hsl(0, 0%, 100%);
-    width: 320px;
-    height: 75vh;
-    background: var(--Dark_Grey);
+    background-color: #2c2c2c;
+    border-radius: 10px;
+    padding: 20px;
+    text-align: center;
+    width: 300px;
+}
+
+.image img {
+    border-radius: 50%;
+    width: 100px;
+    height: 100px;
+    margin-bottom: 15px;
+    border: 2px solid #cfcfcf;
+}
+
+h2 {
+    margin: 10px 0;
+    font-size: 1.5em;
+    color: #cfcfcf;
+}
+
+h3 {
+    margin: 5px 0;
+    font-size: 1.2em;
+    color: #a0a0a0;
+}
+
+p {
+    margin: 10px 0;
+    font-size: 1em;
+    color: #a0a0a0;
 }
 
 .form {
-    width: 100%;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    gap: 12px;
+    margin-top: 20px;
 }
 
-.button{
-    height: 50px;
+.button {
+    display: block;
+    width: 100%;
+    margin: 10px 0;
+    text-decoration: none;
+}
+
+.button input {
+    width: 100%;
+    padding: 10px;
     border: none;
     border-radius: 5px;
-    background-color: var(--Grey);
-    color: var(--White);
-    width: 80%;
-}
-
-a{
-    text-align: center;
-}
-
-.personal-info {
-    margin-bottom: 50px;
-    text-align: center;
-}
-
-.personal-info h2 {
-    font-weight: 600;
-}
-
-a:hover{
+    background-color: #003366;
+    color: white;
+    font-size: 1em;
     cursor: pointer;
-    background-color: var(--Green);
-    color: var(--Dark_Grey);
 }
 
-input:hover{
-    cursor: pointer;
-    background-color: var(--Green);
-    color: var(--Dark_Grey);
+.button input:hover {
+    background-color: #002244;
 }
 
-input{
-    font-size: 14px;
-    color: var(--White);
-    font-weight: 700;
-}
-
-.personal-info h3 {
-    font-weight: 400;
-}
-
-body {
-    margin: 0px;
+.button input:focus {
+    outline: none;
 }
